# jira-mcp-server

./: .env.example  .gitignore  DEPLOYMENT.md  DOCKER_HUB_SETUP.md  Dockerfile  LICENSE  MANIFEST.in  NEXT_STEPS.md  README.md  TEST_SUITE_README.md  build-and-push.sh  claude-desktop-config.json  docker-compose.yml  end-user-test.sh  mcp-registry.yaml  multi-instance-config.py  publish-pypi.sh  pyproject.toml  quick-deploy.sh  run_tests.py  server.py  setup.py  test-end-to-end.sh  test-strategy.md  test_advanced_jql.py  test_advanced_workflow.py  test_all_features_comprehensive.py  test_all_new_tools_mcp.py  test_all_tools_mcp.py  test_attachment_tools.py  test_connection.py  test_create_issue.py  test_custom_fields_sprints.py  test_file_operations.py  test_final_comprehensive.py  test_final_ultimate.py  test_get_issues_by_assignee.py  test_get_project_stats.py  test_get_projects.py  test_get_recent_issues.py  (+16 more)
.amazonq/rules/: guidelines.md
deploy/: README.md  build-and-push.sh  publish-pypi.sh
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  deployment.yaml  secret.yaml
mcp-clients/: claude-desktop-local.json  cline-config.json  vscode-user-settings.json  vscode-workspace-settings.json
references/: FastMCP_2.0_Changelog.md  FastMCP_2.0_Overview.md  README.md
test/: QUALITATIVE_TEST_GUIDE.md  QUALITATIVE_TEST_RESULTS.md  TEST_GUIDE.md  comprehensive_real_tests.py  content_validation_tests.py  jira_integration_tests.py  real_content_tests.py  test_suite.py
